refactor: update project structure and docs

--- a/projects/examples/colab.ipynb
+++ b/projects/examples/colab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ef9942a0",
    "metadata": {},
    "outputs": [],
@@ -11,15 +11,31 @@
     "!sudo apt-get update\n",
     "!sudo apt-get install -y swig\n",
     "# Install the custom package for this course.\n",
-    "!pip install \"git+https://github.com/xrhd/mula.git@fix/main\""
+    "%pip install \"git+https://github.com/xrhd/mula.git@fix/main\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "542cae33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  ________________\n",
+      "| Work in progress |\n",
+      "  ================\n",
+      "                                                    ^__^\n",
+      "                   (oo)\\_______\n",
+      "                   (__)\\       )\\/                       ||----w |\n",
+      "                       ||     ||\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import mula\n",
     "from mula import rl"
